fixed line-wrap and caret bugs

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,8 +39,38 @@ div.cm-activeLine{
 }
 .cm-editor{
     border-radius: 10px !important;
-    padding: 20px 10px;
-    caret-color: transparent !important;
-    caret: transparent !important;
+    padding: 20px;
+    /* caret-color: transparent !important; */
     outline: none !important;
+    /* min-width: 80px; */
+    cursor: text !important;
+    pointer-events:visible;
+    word-wrap: break-word !important;
+    white-space: pre-wrap !important;
+    word-break: break-word !important;
+    width: fit-content;
+    overflow: visible !important;
 }
+.cm-line{
+    word-break: break-all !important;
+    word-wrap: break-word !important;
+    overflow: visible !important;
+}
+.gradient-cover-one{
+    background: hsla(280, 95%, 57%, 1);
+
+background: linear-gradient(180deg, hsla(280, 95%, 57%, 1) 0%, hsla(193, 90%, 55%, 1) 100%);
+
+background: -moz-linear-gradient(180deg, hsla(280, 95%, 57%, 1) 0%, hsla(193, 90%, 55%, 1) 100%);
+
+background: -webkit-linear-gradient(180deg, hsla(280, 95%, 57%, 1) 0%, hsla(193, 90%, 55%, 1) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#B429F9", endColorstr="#26C5F3", GradientType=1 );
+}
+.cm-scroller{
+    overflow-x: hidden !important;
+    /* white-space: pre-wrap !important; */
+    word-wrap: break-word !important;
+    overflow-wrap: break-word !important;
+}
+
